[package]
name = "sol-pnl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"

[profile.release]
opt-level = 3
lto = true
